# oslosphinx

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: check_blueprints.rst  conf.py  index.rst  installation.rst  support_matrix.rst  theme_check.rst  usage.rst
oslo/: __init__.py
oslo/sphinx/: __init__.py  autoindex.py  intersphinx.py
oslo/sphinx/theme/openstack/: layout.html
oslosphinx/: __init__.py  check_blueprints.py  intersphinx.py  support_matrix.css  support_matrix.py
oslosphinx/theme/openstack/: layout.html  theme.conf
oslosphinx/theme/openstack/static/: basic.css  tweaks.css
releasenotes/notes/: obsolete-3da30e6cd2867d0e.yaml
releasenotes/source/: conf.py  index.rst
tools/: tox_install.sh
