[metadata]
name = oslosphinx
summary = OpenStack Sphinx Extensions and Theme
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
	Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    oslosphinx

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
